examples/test/testpolicy148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy148
  namespace: namespace354
spec:
  podSelector:
    matchLabels:
      key7: value38
      key31: value37
      key13: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value5
      podSelector:
        matchLabels:
          key37: value17
